# ThomasEngine

./: .gitignore  CMakeLists.txt  README.md  ThomasEngine.sln
Editor/: App.xaml  MainWindow.xaml.cs
Editor/Common/: ViewModelBase.cs
Editor/Components/: Component.cs  GameEntity.cs  Transform.cs
Editor/Dictionaries/: ControlTemplate.xaml  ControlTemplate.xaml.cs
Editor/Editors/WorldEditor/: GameEntityView.xaml  GameEntityView.xaml.cs  ProjectLayoutView.xaml  ProjectLayoutView.xaml.cs  WorldEditorView.xaml  WorldEditorView.xaml.cs
Editor/GameProject/: NewProject.cs  OpenProject.cs  Project.cs  ProjectBrowserDialog.xaml  ProjectBrowserDialog.xaml.cs  Scene.cs
Editor/ProjectTemplates/EmptyProject/: project.thomas
Editor/ProjectTemplates/FirstPersonProject/: Template.xml
Editor/ProjectTemplates/ThirdPersonProject/: Template.xml
Editor/Utilities/: Logger.cs  LoggerView.xaml  LoggerView.xaml.cs  Serializer.cs  UndoRedo.cs  UndoRedoView.xaml  Utilities.cs
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  pch.h
Engine/Common/: CommonHeaders.h  Id.h  PrimitiveTypes.h
Engine/Components/: ComponentsCommon.h  Entity.cpp  Entity.h  Transform.cpp  Transform.h
Engine/EngineAPI/: GameEntity.cpp  GameEntity.h  TransformComponent.cpp  TransformComponent.h
Engine/Header/: Camera.h  Component.h  ComponentBase.h  GameManager.h  GameObject.h  IScript.h  MeshRenderer.h  PhysicsSystem.h  RenderSystem.h  Rigidbody3D.h  Scene.h  ScriptSystem.h
Engine/Source/: Component.cpp  GameManager.cpp  GameObject.cpp  IScript.cpp  MeshRenderer.cpp  PhysicSystem.cpp  RenderSystem.cpp  Rigidbody3D.cpp  Scene.cpp  ScriptSystem.cpp
Engine/Utilities/: MathTypes.h  Utilities.h
Gameplay/: CMakeLists.txt  pch.h
Gameplay/Header/: CameraMovement.h
Gameplay/Source/: CameraMovement.cpp  main.cpp
Render/: CMakeLists.txt  pch.h
Render/Header/: DDSTextureLoader.h  FbxFactory.h  Geometry.h  GraphicEngine.h  Material.h  Mesh.h  ObjFactory.h  ObjModel.h  PSOManager.h  PrimitiveGeometry.h  Render.h  RenderResources.h  RenderTarget.h  ResourcesCache.h  Texture.h  UploadBuffer.h  Window.h
Render/Source/: DDSTextureLoader.cpp  FbxFactory.cpp  GraphicEngine.cpp  Material.cpp  Mesh.cpp  ObjFactory.cpp  PSOManager.cpp  PrimitiveGeometry.cpp  Render.cpp  RenderResources.cpp  RenderTarget.cpp  ResourcesCache.cpp  Texture.cpp  UploadBuffer.cpp  Window.cpp
ThomasEngine/ThomasEngine/: ThomasEngine.sln
ThomasEngine/ThomasEngine/Editor/: Editor.csproj  MainWindow.xaml
ThomasEngine/ThomasEngine/Editor/Common/: RelayCommand.cs
ThomasEngine/ThomasEngine/Editor/Editors/WorldEditor/: ProjectLayoutView.xaml  ProjectLayoutView.xaml.cs  WorldEditorView.xaml  WorldEditorView.xaml.cs
ThomasEngine/ThomasEngine/Editor/GameProject/: NewProject.cs  NewProjectView.xaml  NewProjectView.xaml.cs  OpenProjectView.xaml  OpenProjectView.xaml.cs  Project.cs  ProjectBrowserDialog.xaml  ProjectBrowserDialog.xaml.cs  Scene.cs
ThomasEngine/ThomasEngine/Editor/ProjectTemplates/EmptyProject/: Template.xml  project.thomas
ThomasEngine/ThomasEngine/Editor/ProjectTemplates/TopDownProject/: Template.xml
ThomasEngine/ThomasEngine/Editor/Utilities/: UndoRedo.cs
Tools/: CMakeLists.txt  pch.h
Tools/Header/: Color.h  PrimitiveTypes.h  Transform.h  Utils.h  Vector.hpp
Tools/Source/: Color.cpp  Transform.cpp  Utils.cpp
config/: settings.json
ide/: ThomasEngine.sln
ide/Engine/: Engine.vcxproj  Engine.vcxproj.filters
ide/Gameplay/: Gameplay.vcxproj  Gameplay.vcxproj.filters
ide/Render/: Render.vcxproj  Render.vcxproj.filters
ide/Tools/: Tools.vcxproj  Tools.vcxproj.filters
res/Gameplay/shaders/: shader.hlsl
res/Gameplay/textures/: wood.dds
res/shaders/: postProcess.hlsl  shader.hlsl
res/textures/: Abdomen_Abdomen_Panties_PantiesColor.tga  Body_BodyBump.tga  Body_BodyColor.tga  Body_Body_Bra_Bra2Color.tga  DefaultTex.dds  EyeL_EyelashL_Eyelash1LColor.tga  EyeR_EyeballR_EyeballRColor.tga  EyeR_EyelashR_Eyelash1RColor.tga  Head_Hair_Hair07Bump.tga  Mouth_LowerTeeth_LowerTeeth1Color.tga  sky.dds
src/Engine/: pch.h
src/Engine/Header/: Camera.h  Component.h  ComponentBase.h  GameManager.h  GameObject.h  IScript.h  MeshRenderer.h  RenderSystem.h  Scene.h
src/Engine/Source/: Component.cpp  GameManager.cpp  GameObject.cpp  IScript.cpp  MeshRenderer.cpp  RenderSystem.cpp  Scene.cpp  ScriptSystem.cpp
src/Gameplay/: main.cpp  pch.h
src/Gameplay/Source/: CameraMovement.cpp  main.cpp
src/Render/: pch.h
src/Render/Header/: DDSTextureLoader.h  FbxFactory.h  Geometry.h  GraphicEngine.h  Material.h  Mesh.h  ObjFactory.h  PrimitiveGeometry.h  Render.h  RenderResources.h  Texture.h  UploadBuffer.h  Window.h
src/Render/Source/: DDSTextureLoader.cpp  FbxFactory.cpp  GraphicEngine.cpp  Material.cpp  Mesh.cpp  ObjFactory.cpp  PrimitiveGeometry.cpp  Render.cpp  RenderResources.cpp  ResourcesCache.cpp  Texture.cpp  UploadBuffer.cpp  Window.cpp
src/Tools/Header/: Color.h  Matrix4x4.hpp  PrimitiveTypes.h  Transform.h  Utils.h
src/Tools/Source/: Color.cpp  Transform.cpp  Utils.cpp
